--- a/src/app/features/home/components/pokemon-list/pokemon-list.html
+++ b/src/app/features/home/components/pokemon-list/pokemon-list.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="text-gb-lighter bg-gb-dark min-h-screen p-4">
     <div class="container mx-auto">
       <h1 class="text-3xl font-bold text-center mb-8 uppercase text-gb-lighter">Pokemon List</h1>
@@ -5,7 +6,10 @@
       <div *ngIf="pokemons.length > 0 && !isLoading" class="card-grid">
         <app-card 
           *ngFor="let pokemon of pokemons" 
-          [pokemon]="pokemon">
+          [pokemon]="pokemon"
+          (addToPokedex)="addToPokedex($event)" 
+          [isInPokedex]="isPokemonInPokedex(pokemon.id)">
+          
         </app-card>
       </div>
       
