--- a/src/app/features/dashboard/components/pokedex/pokedex.html
+++ b/src/app/features/dashboard/components/pokedex/pokedex.html
@@ -4,9 +4,9 @@
     <div class="flex w-full max-w-6xl mx-auto gap-4">
       
       <!-- Panel izquierdo - Visualización del Pokémon -->
-      <div class="w-2/3 bg-gradient-to-b from-yellow-100 to-yellow-200 rounded-3xl p-6 shadow-2xl border-4 border-yellow-400">
+      <div class="w-2/3 bg-gradient-to-b from-yellow-100 to-yellow-200 rounded-3xl p-4 shadow-2xl border-4 border-yellow-400 flex flex-col gap-4">
         <!-- Header -->
-        <div class="flex justify-between items-center mb-4">
+        <div class="flex justify-between items-center">
           <div class="flex items-center gap-2">
             <div class="w-3 h-3 bg-red-500 rounded-full"></div>
             <h2 class="text-blue-900 font-bold text-lg">Mi Pokédex</h2>
@@ -40,14 +40,14 @@
               [src]="getPokemonSprite(pokemonActual)" 
               [alt]="pokemonActual.name" 
               class="w-64 h-64 object-contain mx-auto transition-transform hover:scale-110">
-            <p class="text-2xl font-bold text-gray-800 capitalize mt-2">
+            <p class="text-2xl font-bold text-gray-800 capitalize">
               {{ pokemonActual.name }}
             </p>
           </div>
         </div>
   
         <!-- Información del Pokémon seleccionado -->
-        <div *ngIf="!isPokedexEmpty && pokemonActual" class="bg-gray-200 border-4 border-gray-300 rounded-xl p-4 mt-4 text-gray-700">
+        <div *ngIf="!isPokedexEmpty && pokemonActual" class="bg-gray-200 border-4  border-gray-300 rounded-xl p-3 text-gray-700 flex-1">
           <div class="grid grid-cols-2 gap-4 mb-3">
             <!-- Número -->
             <div>
@@ -150,12 +150,12 @@
               <button
                 (click)="eliminarPokemonActual()"
                 title="Eliminar de Pokédex"
-                class="opacity-0 group-hover:opacity-100 transition-opacity bg-red-500 text-white rounded-full w-7 h-7 flex items-center justify-center hover:bg-red-600 absolute right-2 flex-shrink-0">
+                class="opacity-0 group-hover:opacity-100 transition-opacity bg-red-500 text-white rounded-full w-7 h-7 flex items-center justify-center hover:bg-red-600 absolute right-2 flex-shrink-0 text-xs">
                 ✕
               </button>
               
               <!-- Flecha indicadora -->
-              <div class="text-orange-500 text-xl flex-shrink-0 group-hover:translate-x-1 transition-transform">
+              <div class="text-orange-500 text-xl flex-shrink-0 group-hover:translate-x-1 group-hover:opacity-0 transition-all">
                 ▶
               </div>
             </div>
